force-app/main/default/staticresources/python/Disappear/src/objects/PubStatus__c.object
<CustomObject>
    <description>List of Status for a Publication - Target Date / Revised Date / Actual Date
Will be used for planning</description>
    <fields>
        <fullName>ActualDate_CurrentStatus__c</fullName>
        <formula>IF (ActualDate__c &gt; Pub_Current_Status_Actual_Date__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ActualDate &gt; CurrentStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActualDate__c</fullName>
        <label>Actual Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Days_Before_Target__c</fullName>
        <description>Hidden field that calculates the days up until the target date (including the full day of the target date) in the review of the deadline.</description>
        <label>hide Days Before Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Extension__c</fullName>
        <description>Hidden field that identifies the number of days that the publication status was extended from the original target date.</description>
        <label>hide Days Extension</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_OrigTarget_Completion__c</fullName>
        <description>Hidden field that identifies how far off the original revised date was from the actual date of status change for the publication</description>
        <label>hide Days OrigTarget Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <description>Hidden field that identifies the number of days that the status is overdue for changing based on the latest of the revised target date or the target date.</description>
        <label>hide Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_RevTarget_Completion__c</fullName>
        <description>Hidden field that calculates the difference between how long it took for the actual status change date and the revised target date</description>
        <label>hide Days RevTarget Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPR_Cycle_Num_Formula__c</fullName>
        <formula>IF(FPR_Cycle__r.FPR_Cycle_Num__c &gt; 0.0, text(FPR_Cycle__r.FPR_Cycle_Num__c), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FPR Cycle #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPR_Cycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FPR Cycle</label>
        <referenceTo>FPR_Cycle__c</referenceTo>
        <relationshipName>Pub_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FPR_Cycle_sort_num__c</fullName>
        <formula>IF(FPR_Cycle__c = null, 0, FPR_Cycle__r.FPR_Cycle_Num__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FPR Cycle num for sorting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsActualDateEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Release 1.1 column - for business logic to control if the actual date of a pub status is editable.
Please note that this field will be populated by business logic after PubStatusModel Load the list of publication status for a Pub.

We will not use values persisted in the Database.</description>
        <label>IsActualDateEditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCurrentFPRCycleForPub__c</fullName>
        <formula>Publication_id__r.Current_FPRCycle_Id_Formula__c  =  FPR_Cycle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCurrentFPRCycleForPub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCurrentSubmissionCycleForPub__c</fullName>
        <formula>Publication_id__r.Current_SubmissionCycle_Id_Formula__c = Submission_Cycle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCurrentSubmissionCycleForPub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to logically delete the record.

Release 1.1 Renamed isLogicallyDeleted to Expired</description>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Target to which Journal</description>
        <label>Journal</label>
        <referenceTo>Journal__c</referenceTo>
        <relationshipName>PubStatuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Target a Meeting</description>
        <label>Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipName>PubStatuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pub_Current_Status_Actual_Date__c</fullName>
        <formula>Publication_id__r.PubStatus__r.ActualDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pub Current Status Actual Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Publication_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication_id</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipName>PubStatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_For_Change__c</fullName>
        <label>Reason For Change</label>
        <picklist>
            <picklistValues>
                <fullName>Delay in Data Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay in publication of primary manuscript</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External author requested timeline shift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External author review delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Steering Committee delays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal contributor delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal reviewer delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requests for additional analyses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resourcing constraints</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RevisedTargetDate__c</fullName>
        <label>Latest Revised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Route_Pattern__c</fullName>
        <description>DS : SG : PI  used in routing.
Terminate FPR Cycle will check if the RoutePattern is the same and alert user to change Route Pattern before Terminating a FPR Cycle.</description>
        <label>Route Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT(Status__r.Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Status</label>
        <referenceTo>Status__c</referenceTo>
        <relationshipName>PubStatuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission_Cycle_Num_Formula__c</fullName>
        <formula>Submission_Cycle__r.Submission_Cycle_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submission Cycle #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission_Cycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission Cycle</label>
        <referenceTo>SubmissionCycle__c</referenceTo>
        <relationshipName>Pub_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TargetDate__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <description>Temp field to concatenate Journal name and Meeting name to display a unified target name</description>
        <label>Target</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Publication Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Publication_id__c</columns>
        <columns>NAME</columns>
        <columns>Submission_Cycle_Num_Formula__c</columns>
        <columns>FPR_Cycle_Num_Formula__c</columns>
        <columns>Status__c</columns>
        <columns>RevisedTargetDate__c</columns>
        <columns>ActualDate__c</columns>
        <columns>Journal__c</columns>
        <columns>Meeting__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publication_id__c</field>
            <operation>equals</operation>
            <value>Pub-Id-008241</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Ranjeet_View</fullName>
        <columns>Publication_id__c</columns>
        <columns>NAME</columns>
        <columns>Submission_Cycle_Num_Formula__c</columns>
        <columns>FPR_Cycle_Num_Formula__c</columns>
        <columns>Submission_Cycle__c</columns>
        <columns>FPR_Cycle__c</columns>
        <columns>IsLogicallyDeleted__c</columns>
        <columns>Status__c</columns>
        <columns>RevisedTargetDate__c</columns>
        <columns>ActualDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publication_id__c</field>
            <operation>equals</operation>
            <value>Pub-Id-055069</value>
        </filters>
        <label>Ranjeet View</label>
    </listViews>
    <listViews>
        <fullName>Scott_s_Publication_Statuses</fullName>
        <columns>Publication_id__c</columns>
        <columns>NAME</columns>
        <columns>Submission_Cycle_Num_Formula__c</columns>
        <columns>FPR_Cycle_Num_Formula__c</columns>
        <columns>Status__c</columns>
        <columns>RevisedTargetDate__c</columns>
        <columns>ActualDate__c</columns>
        <columns>Journal__c</columns>
        <columns>Meeting__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publication_id__c</field>
            <operation>equals</operation>
            <value>Pub-Id-002139</value>
        </filters>
        <label>Scott&apos;s Publication Statuses</label>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>PubStatus Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publication Statuses</pluralLabel>
    <recordTypes>
        <fullName>Legacy_Pub_Status</fullName>
        <active>true</active>
        <label>Legacy Pub Status</label>
    </recordTypes>
    <recordTypes>
        <fullName>default</fullName>
        <active>true</active>
        <label>default</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Actual_Date_is_NOT_in_future</fullName>
        <active>true</active>
        <errorConditionFormula>ActualDate__c &gt; NOW()</errorConditionFormula>
        <errorDisplayField>ActualDate__c</errorDisplayField>
        <errorMessage>Please DO NOT Enter an Actual Date in Future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Proposal_Complete_Update</fullName>
        <active>true</active>
        <description>Proposal Complete Actual Date can only be edited by BA or GPPL</description>
        <errorConditionFormula>AND
(NOT(OR( CONTAINS($Profile.Name, &apos;Admin&apos;),$Profile.Name = &apos;APPEAR GPPL&apos;)),
 ISCHANGED( ActualDate__c),
  ISPICKVAL(Status__r.PubRecordType__c,&quot;Execute&quot;),
  ISPICKVAL(Status__r.Stage__c,&quot;Execute&quot;),
 Status__r.Name = &quot;Proposal Complete&quot; 
)</errorConditionFormula>
        <errorDisplayField>ActualDate__c</errorDisplayField>
        <errorMessage>Only a Business Administrator or GPPL can enter an actual date for Proposal Complete.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TargetDate_is_not_Editable</fullName>
        <active>true</active>
        <description>&quot;Target Date&quot; field not allow user to edit it if there is a value present for the Submitted/Completed status only.  The dates of which the changes should be able to be made are between 1/1 and 2/15</description>
        <errorConditionFormula>AND(
ISCHANGED(TargetDate__c),
NOT(ISBLANK(PRIORVALUE(TargetDate__c))),
NOT(OR(MONTH(TODAY()) == 1,And(MONTH(TODAY())==2,DAY(TODAY())&lt;=15))),
Status__r.Name = &apos;Submitted/Completed&apos;,
NOT(CONTAINS($Profile.Name, &apos;Admin&apos;))
)</errorConditionFormula>
        <errorMessage>Once Target Date on Submitted/Completed status is set, please use Latest Target Submission Date for any updates. The target date will be editable the following year from Jan 1st to Feb 15th</errorMessage>
    </validationRules>
</CustomObject>